--- a/create_schema_and_populate_kb.ipynb
+++ b/create_schema_and_populate_kb.ipynb
@@ -171,11 +171,335 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "32a3e391",
+   "execution_count": 10,
+   "id": "573cce10",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def execute_and_print_result(query):\n",
+    "  results = conn.execute(query)\n",
+    "  while results.has_next():\n",
+    "      print(results.get_next())\n",
+    "  results.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "af0401e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def execute_and_return_result(query):\n",
+    "  results = conn.execute(query)\n",
+    "  return_values = []\n",
+    "  while results.has_next():\n",
+    "      return_values.append(results.get_next())\n",
+    "  results.close()\n",
+    "  return return_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "id": "6b2910b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[26]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Query1 answer\n",
+    "execute_and_print_result('MATCH (a:MatchNode)-[e:MatchPlayers]->(b:Player) WHERE b.player_name = \"Glenn Murray\" AND EXISTS \\\n",
+    "{MATCH (a)-[MatchHeldInSeason]->(s:Season) WHERE s.season_name=\"2015/2016\"} AND EXISTS \\\n",
+    "{MATCH (a)-[MatchPartOfCompetition]->(c:Competition) WHERE c.competition_name = \"Premier League\"} RETURN count(a.match_id)') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "cdb870f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[18]\n",
+      "[18]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Query2 answer - sum both scores\n",
+    "execute_and_print_result('MATCH (a:MatchNode)-[e:MatchAwayTeam]->(t:Team) WHERE t.team_name = \"Leicester City\" AND EXISTS \\\n",
+    "{MATCH (a)-[MatchHeldInSeason]->(s:Season) WHERE s.season_name=\"2015/2016\"} AND EXISTS \\\n",
+    "{MATCH (a)-[MatchPartOfCompetition]->(c:Competition) WHERE c.competition_name = \"Premier League\"} RETURN sum(a.home_score)')\n",
+    "execute_and_print_result('MATCH (a:MatchNode)-[e:MatchHomeTeam]->(t:Team) WHERE t.team_name = \"Leicester City\" AND EXISTS \\\n",
+    "{MATCH (a)-[MatchHeldInSeason]->(s:Season) WHERE s.season_name=\"2015/2016\"} AND EXISTS \\\n",
+    "{MATCH (a)-[MatchPartOfCompetition]->(c:Competition) WHERE c.competition_name = \"Premier League\"} RETURN sum(a.away_score)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "f3f241c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4]\n",
+      "[0, 1]\n",
+      "[1, 2]\n",
+      "[1, 2]\n",
+      "[1, 1]\n",
+      "[0, 1]\n",
+      "[0, 1]\n",
+      "[1, 3]\n",
+      "[0, 3]\n",
+      "[2, 2]\n",
+      "[0, 4]\n",
+      "[2, 2]\n",
+      "[0, 2]\n",
+      "[0, 0]\n",
+      "[0, 0]\n",
+      "[0, 1]\n",
+      "[2, 3]\n",
+      "[5, 2]\n",
+      "[1, 1]\n",
+      "[0, 0]\n",
+      "[0, 0]\n",
+      "[1, 0]\n",
+      "[3, 2]\n",
+      "[2, 5]\n",
+      "[1, 1]\n",
+      "[4, 2]\n",
+      "[1, 0]\n",
+      "[2, 1]\n",
+      "[2, 1]\n",
+      "[1, 1]\n",
+      "[1, 0]\n",
+      "[1, 0]\n",
+      "[3, 1]\n",
+      "[3, 0]\n",
+      "[2, 2]\n",
+      "[4, 0]\n",
+      "[2, 2]\n",
+      "[2, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Query3 answer - ouputs [goals score, goals conceded] for each match in the given stadium\n",
+    "execute_and_print_result('MATCH (a:MatchNode)-[MatchHeldInStadium]->(d:Stadium) WHERE d.name = \"King Power Stadium \" AND EXISTS \\\n",
+    "{MATCH (a)-[MatchAwayTeam]->(t:Team) WHERE t.team_name = \"Leicester City\"} AND EXISTS \\\n",
+    "{MATCH (a)-[MatchHeldInSeason]->(s:Season) WHERE s.season_name=\"2015/2016\"} AND EXISTS \\\n",
+    "{MATCH (a)-[MatchPartOfCompetition]->(c:Competition) WHERE c.competition_name = \"Premier League\"} RETURN a.away_score, a.home_score')\n",
+    "\n",
+    "execute_and_print_result('MATCH (a:MatchNode)-[MatchHeldInStadium]->(d:Stadium) WHERE d.name = \"King Power Stadium \" AND EXISTS \\\n",
+    "{MATCH (a)-[MatchHomeTeam]->(t:Team) WHERE t.team_name = \"Leicester City\"} AND EXISTS \\\n",
+    "{MATCH (a)-[MatchHeldInSeason]->(s:Season) WHERE s.season_name=\"2015/2016\"} AND EXISTS \\\n",
+    "{MATCH (a)-[MatchPartOfCompetition]->(c:Competition) WHERE c.competition_name = \"Premier League\"} RETURN a.home_score, a.away_score')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "0f1a3471",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Andre Marriner']\n",
+      "['Martin Atkinson']\n",
+      "['Craig Pawson']\n",
+      "['Mike Jones']\n",
+      "['Kevin Friend']\n",
+      "['Roger East']\n",
+      "['Paul Tierney']\n",
+      "['Simon Hooper']\n",
+      "['Robert Madley']\n",
+      "['Mike Dean']\n",
+      "['Lee Mason']\n",
+      "['Anthony Taylor']\n",
+      "['Michael Oliver']\n",
+      "['Keith Stroud']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Query4 answer\n",
+    "execute_and_print_result('MATCH (a:MatchNode)-[MatchReferee]->(r:Referee) WHERE r.name <>\"\" AND EXISTS \\\n",
+    "{MATCH (a)-[e:MatchPlayers]->(b:Player) WHERE b.player_name = \"Glenn Murray\"} AND EXISTS \\\n",
+    "{MATCH (a)-[MatchHeldInSeason]->(s:Season) WHERE s.season_name=\"2015/2016\"} AND EXISTS \\\n",
+    "{MATCH (a)-[MatchPartOfCompetition]->(c:Competition) WHERE c.competition_name = \"Premier League\"} RETURN DISTINCT r.name') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "id": "4bf325a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Real Madrid']\n",
+      "['Getafe']\n",
+      "['Levante UD']\n",
+      "['Bengaluru']\n",
+      "['Bayern Munich']\n",
+      "['Borussia Dortmund']\n",
+      "['Liverpool']\n",
+      "['Nigeria']\n",
+      "['German DR']\n",
+      "[\"Germany Women's\"]\n",
+      "[\"Switzerland Women's\"]\n",
+      "['Austria']\n",
+      "['Hoffenheim']\n",
+      "['Hamburger SV']\n",
+      "['Schalke 04']\n",
+      "['Augsburg']\n",
+      "['Darmstadt 98']\n",
+      "['Eintracht Frankfurt']\n",
+      "['Borussia Mönchengladbach']\n",
+      "['Hannover 96']\n",
+      "['Germany']\n",
+      "['Bayer Leverkusen']\n",
+      "['VfB Stuttgart']\n",
+      "['Wolfsburg']\n",
+      "['Málaga']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Query5 answer\n",
+    "execute_and_print_result('MATCH (t:Team)-[TeamManagers]->(m:Managers) WHERE m.name <> \"\" AND EXISTS \\\n",
+    "{MATCH (m)-[ManagerCountry]->(c:Country) WHERE c.name = \"Germany\" }  RETURN DISTINCT t.team_name') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26df850b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AND EXISTS \\\n",
+    "{MATCH (a)-[MatchHeldInSeason]->(s:Season) WHERE s.season_name=\"2015/2016\"} AND EXISTS \\\n",
+    "{MATCH (a)-[MatchPartOfCompetition]->(c:Competition) WHERE c.competition_name = \"Premier League\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "id": "140c3635",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Eddie Howe']\n",
+      "['Alan Pardew']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Query6 answer\n",
+    "execute_and_print_result('MATCH (t:Team)-[TeamManagers]->(m: Managers) WHERE m.name <> \"\" AND EXISTS \\\n",
+    "{MATCH (t)<-[PlayerTeam]-(a:Player) WHERE a.player_name = \"Glenn Murray\"}  RETURN DISTINCT m.name') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "id": "e619d549",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Query7 answer\n",
+    "execute_and_print_result('MATCH (a:Player)<-[EventRelatedToPlayer]-(e:Event) WHERE e.event_id <> \"\" AND EXISTS \\\n",
+    "{MATCH (a)<-[MatchPlayers]-(MatchNode) WHERE a.player_name = \"So-Yun Ji\"}  AND EXISTS \\\n",
+    "{MATCH (a)-[MatchHeldInSeason]->(s:Season) WHERE s.season_name=\"2015/2016\"} AND EXISTS \\\n",
+    "{MATCH (a)-[MatchPartOfCompetition]->(c:Competition) WHERE c.competition_name = \"Premier League\"} RETURN count(e.event_id)') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "id": "475ec771",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Query8 answer\n",
+    "execute_and_print_result('MATCH (a:Player)<-[EventRelatedToPlayer]-(e:Event) WHERE e.type_name = \"Own Goal For\" AND EXISTS \\\n",
+    "{MATCH (a)<-[MatchPlayers]-(MatchNode) WHERE a.player_name = \"So-Yun Ji\"} AND EXISTS \\\n",
+    "{MATCH (a)-[MatchHeldInSeason]->(s:Season) WHERE s.season_name=\"2015/2016\"} AND EXISTS \\\n",
+    "{MATCH (a)-[MatchPartOfCompetition]->(c:Competition) WHERE c.competition_name = \"Premier League\"} RETURN count(e.event_id)') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "id": "6ffcaa7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Query9 answer\n",
+    "execute_and_print_result('MATCH (a:Player)<-[EventRelatedToPlayer]-(e:Event) WHERE \\\n",
+    "e.bad_behaviour_card_name = \"Yellow Card\" OR e.bad_behaviour_card_name = \"Second Yellow\" OR e.bad_behaviour_card_name = \"Red Card\" AND EXISTS \\\n",
+    "{MATCH (a)<-[MatchPlayers]-(MatchNode) WHERE a.player_name = \"So-Yun Ji\"}  AND EXISTS \\\n",
+    "{MATCH (a)-[MatchHeldInSeason]->(s:Season) WHERE s.season_name=\"2015/2016\"} AND EXISTS \\\n",
+    "{MATCH (a)-[MatchPartOfCompetition]->(c:Competition) WHERE c.competition_name = \"Premier League\"} RETURN count(e.event_id)') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "id": "47a29c38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Query10 answer\n",
+    "execute_and_print_result('MATCH (a:Player)<-[EventRelatedToPlayer]-(e:Event) WHERE e.type_name = \"Own Goal Against\" AND EXISTS \\\n",
+    "{MATCH (a)-[MatchHeldInSeason]->(s:Season) WHERE s.season_name=\"2015/2016\"} AND EXISTS \\\n",
+    "{MATCH (a)-[MatchPartOfCompetition]->(c:Competition) WHERE c.competition_name = \"Premier League\"} RETURN a.player_name') "
+   ]
   }
  ],
  "metadata": {
