--- a/src/create_schema_and_populate_kb.ipynb
+++ b/src/create_schema_and_populate_kb.ipynb
@@ -32,7 +32,7 @@
     {
      "data": {
       "text/plain": [
-       "<kuzu.query_result.QueryResult at 0x279eb2ab280>"
+       "<kuzu.query_result.QueryResult at 0x2233638aa60>"
       ]
      },
      "execution_count": 3,
@@ -86,7 +86,7 @@
     {
      "data": {
       "text/plain": [
-       "<kuzu.query_result.QueryResult at 0x279eb217160>"
+       "<kuzu.query_result.QueryResult at 0x22336281400>"
       ]
      },
      "execution_count": 4,
@@ -171,8 +171,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "573cce10",
+   "execution_count": 6,
+   "id": "1bcab0c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,8 +185,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "af0401e6",
+   "execution_count": 7,
+   "id": "01b4afe2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,8 +201,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
-   "id": "6b2910b3",
+   "execution_count": 8,
+   "id": "ab69fcbf",
    "metadata": {},
    "outputs": [
     {
@@ -222,8 +222,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "id": "cdb870f0",
+   "execution_count": 9,
+   "id": "fbc460ce",
    "metadata": {},
    "outputs": [
     {
@@ -247,14 +247,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
-   "id": "f3f241c4",
+   "execution_count": 10,
+   "id": "8d018551",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[2, 2]\n",
+      "[0, 4]\n",
+      "[2, 2]\n",
+      "[0, 2]\n",
+      "[0, 3]\n",
+      "[0, 0]\n",
+      "[0, 0]\n",
+      "[0, 1]\n",
+      "[2, 3]\n",
+      "[5, 2]\n",
+      "[1, 1]\n",
       "[2, 4]\n",
       "[0, 1]\n",
       "[1, 2]\n",
@@ -263,17 +274,7 @@
       "[0, 1]\n",
       "[0, 1]\n",
       "[1, 3]\n",
-      "[0, 3]\n",
-      "[2, 2]\n",
-      "[0, 4]\n",
-      "[2, 2]\n",
-      "[0, 2]\n",
-      "[0, 0]\n",
-      "[0, 0]\n",
-      "[0, 1]\n",
-      "[2, 3]\n",
-      "[5, 2]\n",
-      "[1, 1]\n",
+      "[3, 0]\n",
       "[0, 0]\n",
       "[0, 0]\n",
       "[1, 0]\n",
@@ -288,7 +289,6 @@
       "[1, 0]\n",
       "[1, 0]\n",
       "[3, 1]\n",
-      "[3, 0]\n",
       "[2, 2]\n",
       "[4, 0]\n",
       "[2, 2]\n",
@@ -311,8 +311,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
-   "id": "0f1a3471",
+   "execution_count": 11,
+   "id": "0b85bbcb",
    "metadata": {},
    "outputs": [
     {
@@ -346,64 +346,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
-   "id": "4bf325a1",
+   "execution_count": 14,
+   "id": "5d00302d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Real Madrid']\n",
-      "['Getafe']\n",
+      "['Hoffenheim']\n",
+      "['Schalke 04']\n",
+      "['Hannover 96']\n",
+      "['Hamburger SV']\n",
+      "['Darmstadt 98']\n",
+      "['Borussia Dortmund']\n",
+      "['VfB Stuttgart']\n",
+      "['Bayer Leverkusen']\n",
+      "['Borussia Mönchengladbach']\n",
+      "['Málaga']\n",
       "['Levante UD']\n",
+      "['Getafe']\n",
+      "['Real Madrid']\n",
       "['Bengaluru']\n",
       "['Bayern Munich']\n",
-      "['Borussia Dortmund']\n",
-      "['Liverpool']\n",
+      "['Germany']\n",
       "['Nigeria']\n",
       "['German DR']\n",
+      "['Austria']\n",
+      "['Eintracht Frankfurt']\n",
+      "['Augsburg']\n",
       "[\"Germany Women's\"]\n",
       "[\"Switzerland Women's\"]\n",
-      "['Austria']\n",
-      "['Hoffenheim']\n",
-      "['Hamburger SV']\n",
-      "['Schalke 04']\n",
-      "['Augsburg']\n",
-      "['Darmstadt 98']\n",
-      "['Eintracht Frankfurt']\n",
-      "['Borussia Mönchengladbach']\n",
-      "['Hannover 96']\n",
-      "['Germany']\n",
-      "['Bayer Leverkusen']\n",
-      "['VfB Stuttgart']\n",
-      "['Wolfsburg']\n",
-      "['Málaga']\n"
+      "['Liverpool']\n",
+      "['Wolfsburg']\n"
      ]
     }
    ],
    "source": [
     "#Query5 answer\n",
     "execute_and_print_result('MATCH (t:Team)-[TeamManagers]->(m:Managers) WHERE m.name <> \"\" AND EXISTS \\\n",
-    "{MATCH (m)-[ManagerCountry]->(c:Country) WHERE c.name = \"Germany\" }  RETURN DISTINCT t.team_name') "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "26df850b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "AND EXISTS \\\n",
+    "{MATCH (m)-[ManagerCountry]->(c:Country) WHERE c.name = \"Germany\" }  AND EXISTS \\\n",
     "{MATCH (a)-[MatchHeldInSeason]->(s:Season) WHERE s.season_name=\"2015/2016\"} AND EXISTS \\\n",
-    "{MATCH (a)-[MatchPartOfCompetition]->(c:Competition) WHERE c.competition_name = \"Premier League\"}"
+    "{MATCH (a)-[MatchPartOfCompetition]->(c:Competition) WHERE c.competition_name = \"Premier League\"}RETURN DISTINCT t.team_name') "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
-   "id": "140c3635",
+   "execution_count": 15,
+   "id": "0e539add",
    "metadata": {},
    "outputs": [
     {
@@ -423,8 +413,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "id": "e619d549",
+   "execution_count": 16,
+   "id": "4de15709",
    "metadata": {},
    "outputs": [
     {
@@ -445,8 +435,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
-   "id": "475ec771",
+   "execution_count": 17,
+   "id": "d58cb5f8",
    "metadata": {},
    "outputs": [
     {
@@ -467,8 +457,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
-   "id": "6ffcaa7e",
+   "execution_count": 18,
+   "id": "fe295563",
    "metadata": {},
    "outputs": [
     {
@@ -490,8 +480,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
-   "id": "47a29c38",
+   "execution_count": 19,
+   "id": "0ab0527d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,6 +490,59 @@
     "{MATCH (a)-[MatchHeldInSeason]->(s:Season) WHERE s.season_name=\"2015/2016\"} AND EXISTS \\\n",
     "{MATCH (a)-[MatchPartOfCompetition]->(c:Competition) WHERE c.competition_name = \"Premier League\"} RETURN a.player_name') "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "acb39c33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rank_player_in_matches(competition_name, season_name, player_name):\n",
+    "    all_players = execute_and_return_result(\n",
+    "        'MATCH (a:MatchNode)-[e:MatchPlayers]->(b:Player) WHERE EXISTS \\\n",
+    "        {MATCH (a)-[MatchHeldInSeason]->(s:Season) WHERE s.season_name=\"{}\"} AND EXISTS \\\n",
+    "        {MATCH (a)-[MatchPartOfCompetition]->(c:Competition) WHERE c.competition_name = \"{}\"} \\\n",
+    "        RETURN b.player_name, count(a.match_id) ORDER BY count(a.match_id) DESC'.format(season_name, competition_name))\n",
+    "\n",
+    "    rank = 1\n",
+    "    for p in all_players:\n",
+    "        if p[0] == player_name:\n",
+    "            return player_name, rank\n",
+    "        rank += 1\n",
+    "    return player_name, \"Not Found\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "3d50734f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'MATCH (a)-'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_22620\\2226749559.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mrank_player_in_matches\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Premier League\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"2015/2016\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Glenn Murray\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_22620\\4050642542.py\u001b[0m in \u001b[0;36mrank_player_in_matches\u001b[1;34m(competition_name, season_name, player_name)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mrank_player_in_matches\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcompetition_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mseason_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mplayer_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     all_players = execute_and_return_result(\n\u001b[1;32m----> 3\u001b[1;33m         \u001b[0;31m'\u001b[0m\u001b[0mMATCH\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mMatchNode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mMatchPlayers\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m->\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mPlayer\u001b[0m\u001b[1;33m)\u001b[0m \u001b[0mWHERE\u001b[0m \u001b[0mEXISTS\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m         \u001b[1;33m{\u001b[0m\u001b[0mMATCH\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mMatchHeldInSeason\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m->\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mSeason\u001b[0m\u001b[1;33m)\u001b[0m \u001b[0mWHERE\u001b[0m \u001b[0ms\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mseason_name\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"{}\"\u001b[0m\u001b[1;33m}\u001b[0m \u001b[0mAND\u001b[0m \u001b[0mEXISTS\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[1;33m{\u001b[0m\u001b[0mMATCH\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mMatchPartOfCompetition\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m->\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mCompetition\u001b[0m\u001b[1;33m)\u001b[0m \u001b[0mWHERE\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompetition_name\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"{}\"\u001b[0m\u001b[1;33m}\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'MATCH (a)-'"
+     ]
+    }
+   ],
+   "source": [
+    "rank_player_in_matches(\"Premier League\", \"2015/2016\", \"Glenn Murray\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88391b84",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
