File with all working queries

--- a/src/create_schema_and_populate_kb.ipynb
+++ b/src/create_schema_and_populate_kb.ipynb
@@ -283,16 +283,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "acb39c33",
+   "execution_count": null,
+   "id": "88391b84",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Query 1\n",
     "def rank_player_in_matches(competition_name, season_name, player_name):\n",
     "    all_players = execute_and_return_result(\n",
-    "        'MATCH (a:MatchNode)-[e:MatchPlayers]->(b:Player) WHERE EXISTS \\\n",
-    "        {MATCH (a)-[MatchHeldInSeason]->(s:Season) WHERE s.season_name=\"{}\"} AND EXISTS \\\n",
-    "        {MATCH (a)-[MatchPartOfCompetition]->(c:Competition) WHERE c.competition_name = \"{}\"} \\\n",
+    "        'MATCH (a:MatchNode)-[e:MatchPlayers]->(b:Player), \\\n",
+    "        (a)-[MatchHeldInSeason]->(s:Season), (a)-[MatchPartOfCompetition]->(c:Competition) \\\n",
+    "        WHERE s.season_name = \"{}\" AND c.competition_name = \"{}\" \\\n",
     "        RETURN b.player_name, count(a.match_id) ORDER BY count(a.match_id) DESC'.format(season_name, competition_name))\n",
     "\n",
     "    rank = 1\n",
@@ -305,34 +306,246 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "3d50734f",
+   "execution_count": null,
+   "id": "6698707c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'MATCH (a)-'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_22620\\2226749559.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mrank_player_in_matches\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Premier League\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"2015/2016\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Glenn Murray\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_22620\\4050642542.py\u001b[0m in \u001b[0;36mrank_player_in_matches\u001b[1;34m(competition_name, season_name, player_name)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mrank_player_in_matches\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcompetition_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mseason_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mplayer_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     all_players = execute_and_return_result(\n\u001b[1;32m----> 3\u001b[1;33m         \u001b[0;31m'\u001b[0m\u001b[0mMATCH\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mMatchNode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mMatchPlayers\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m->\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mPlayer\u001b[0m\u001b[1;33m)\u001b[0m \u001b[0mWHERE\u001b[0m \u001b[0mEXISTS\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m         \u001b[1;33m{\u001b[0m\u001b[0mMATCH\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mMatchHeldInSeason\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m->\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mSeason\u001b[0m\u001b[1;33m)\u001b[0m \u001b[0mWHERE\u001b[0m \u001b[0ms\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mseason_name\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"{}\"\u001b[0m\u001b[1;33m}\u001b[0m \u001b[0mAND\u001b[0m \u001b[0mEXISTS\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[1;33m{\u001b[0m\u001b[0mMATCH\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mMatchPartOfCompetition\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m->\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mCompetition\u001b[0m\u001b[1;33m)\u001b[0m \u001b[0mWHERE\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompetition_name\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"{}\"\u001b[0m\u001b[1;33m}\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'MATCH (a)-'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# rank_player_in_matches(\"Premier League\", \"2015/2016\", \"Glenn Murray\")"
+    "#rank_player_in_matches(\"Premier League\", \"2015/2016\", \"Loris Karius\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88391b84",
+   "id": "46f13c02",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Query 2\n",
+    "def rank_team_in_goal_concession(competition_name, season_name, team_name):\n",
+    "    all_teams = execute_and_return_result(\n",
+    "        'MATCH (a:MatchNode)-[e:MatchAwayTeam]->(t:Team), \\\n",
+    "        (a)-[MatchHeldInSeason]->(s:Season), (a)-[MatchPartOfCompetition]->(c:Competition) \\\n",
+    "        WHERE s.season_name = \"{}\" AND c.competition_name = \"{}\" \\\n",
+    "        RETURN t.team_name, sum(a.home_score) ORDER BY sum(a.home_score) DESC'.format(season_name, competition_name))\n",
+    "\n",
+    "    rank = 1\n",
+    "    for t in all_teams:\n",
+    "        if t[0] == team_name:\n",
+    "            return team_name, rank\n",
+    "        rank += 1\n",
+    "    return team_name, \"Not Found\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28e58624",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#rank_team_in_goal_concession(\"Premier League\", \"2015/2016\", \"Leicester City\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "faa886c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Query3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a448d98a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd7baf08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Query 4\n",
+    "def count_referees_for_player(competition_name, season_name, player_name):\n",
+    "    return execute_and_return_result(\n",
+    "        'MATCH (a:MatchNode)-[MatchReferee]->(r:Referee), (a)-[e:MatchPlayers]->(b:Player), \\\n",
+    "        (a)-[MatchHeldInSeason]->(s:Season), (a)-[MatchPartOfCompetition]->(c:Competition) \\\n",
+    "        WHERE b.player_name = \"{}\" AND s.season_name = \"{}\" AND c.competition_name = \"{}\" \\\n",
+    "        RETURN DISTINCT r.name'.format(player_name, season_name, competition_name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aec3d214",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#count_referees_for_player(\"Premier League\", \"2015/2016\", \"Glenn Murray\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "decd0e15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Query 5\n",
+    "def teams_with_managers_from_country_wrapper(competition_name, season_name, country_name):\n",
+    "    query = f'''\n",
+    "    MATCH (t:Team)-[TeamManagers]->(m:Managers) WHERE m.name <> \"\" AND\n",
+    "    EXISTS {{MATCH (m)-[ManagerCountry]->(c:Country) WHERE c.name = \"{country_name}\" }}  AND\n",
+    "    EXISTS {{MATCH (a)-[MatchHeldInSeason]->(s:Season) WHERE s.season_name=\"{season_name}\"}} AND\n",
+    "    EXISTS {{MATCH (a)-[MatchPartOfCompetition]->(c:Competition) WHERE c.competition_name = \"{competition_name}\"}}\n",
+    "    RETURN DISTINCT t.team_name\n",
+    "    '''\n",
+    "    execute_and_print_result(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99dcfadd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#teams_with_managers_from_country_wrapper(\"Premier League\", \"2015/2016\", \"Germany\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a192eec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Query 6\n",
+    "def managers_for_player(player_name): \n",
+    "    query = f''' \n",
+    "    MATCH (t:Team)-[TeamManagers]->(m: Managers) WHERE m.name <> \"\" AND EXISTS {{MATCH (t)<-[PlayerTeam]-(a:Player) WHERE a.player_name = \"{player_name}\"}} RETURN DISTINCT m.name \n",
+    "    ''' \n",
+    "    execute_and_print_result(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56fbbf05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#managers_for_player(\"Glenn Murray\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69dd34eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Query 7\n",
+    "def event_count_for_player(competition_name, season_name, player_name): \n",
+    "    query = f''' \n",
+    "    MATCH (a:Player)<-[EventRelatedToPlayer]-(e:Event) WHERE e.event_id <> \"\" AND EXISTS {{MATCH (a)<-[MatchPlayers]-(MatchNode) WHERE a.player_name = \"{player_name}\"}} AND EXISTS {{MATCH (a)-[MatchHeldInSeason]->(s:Season) WHERE s.season_name=\"{season_name}\"}} AND EXISTS {{MATCH (a)-[MatchPartOfCompetition]->(c:Competition) WHERE c.competition_name = \"{competition_name}\"}} RETURN count(e.event_id) \n",
+    "    ''' \n",
+    "    execute_and_print_result(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b23bcee0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#event_count_for_player(\"Premier League\", \"2015/2016\", \"So-Yun Ji\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c84a7148",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Query 8\n",
+    "def own_goals_for_player(competition_name, season_name, player_name): \n",
+    "    query = f''' \n",
+    "    MATCH (a:Player)<-[EventRelatedToPlayer]-(e:Event) WHERE e.type_name = \"Own Goal For\" AND EXISTS {{MATCH (a)<-[MatchPlayers]-(MatchNode) WHERE a.player_name = \"{player_name}\"}} AND EXISTS {{MATCH (a)-[MatchHeldInSeason]->(s:Season) WHERE s.season_name=\"{season_name}\"}} AND EXISTS {{MATCH (a)-[MatchPartOfCompetition]->(c:Competition) WHERE c.competition_name = \"{competition_name}\"}} RETURN count(e.event_id) \n",
+    "    ''' \n",
+    "    execute_and_print_result(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d3f6ed8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#own_goals_for_player(\"Premier League\", \"2015/2016\", \"So-Yun Ji\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25d3e2a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Query 9\n",
+    "def card_count_for_player(competition_name, season_name, player_name): \n",
+    "    query = f''' \n",
+    "    MATCH (a:Player)<-[EventRelatedToPlayer]-(e:Event) WHERE (e.bad_behaviour_card_name = \"Yellow Card\" OR e.bad_behaviour_card_name = \"Second Yellow\" OR e.bad_behaviour_card_name = \"Red Card\") AND EXISTS {{MATCH (a)<-[MatchPlayers]-(MatchNode) WHERE a.player_name = \"{player_name}\"}} AND EXISTS {{MATCH (a)-[MatchHeldInSeason]->(s:Season) WHERE s.season_name=\"{season_name}\"}} AND EXISTS {{MATCH (a)-[MatchPartOfCompetition]->(c:Competition) WHERE c.competition_name = \"{competition_name}\"}} RETURN count(e.event_id) \n",
+    "    ''' \n",
+    "    execute_and_print_result(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c692f8fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#card_count_for_player(\"Premier League\", \"2015/2016\", \"So-Yun Ji\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18abba3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Query 10\n",
+    "def own_goals_against_for_player(competition_name, season_name, player_name): \n",
+    "    query = f''' \n",
+    "    MATCH (a:Player)<-[EventRelatedToPlayer]-(e:Event) WHERE e.type_name = \"Own Goal Against\" AND EXISTS {{MATCH (a)-[MatchHeldInSeason]->(s:Season) WHERE s.season_name=\"{season_name}\"}} AND EXISTS {{MATCH (a)-[MatchPartOfCompetition]->(c:Competition) WHERE c.competition_name = \"{competition_name}\"}} RETURN a.player_name \n",
+    "    ''' \n",
+    "    execute_and_print_result(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abdeffe7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#own_goals_against_for_player(\"Premier League\", \"2015/2016\", \"So-Yun Ji\")"
+   ]
   }
  ],
  "metadata": {
