--- a/src/create_schema_and_populate_kb.ipynb
+++ b/src/create_schema_and_populate_kb.ipynb
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6698707c",
+   "id": "a7cac036",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46f13c02",
+   "id": "5879a83c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28e58624",
+   "id": "4a11fbd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,28 +349,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "faa886c7",
+   "execution_count": 1,
+   "id": "daf7fac0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Query3\n"
+    "#Query3\n",
+    "def calculate_win_loss_ratio(team_name, stadium_name, season_name, competition_name):\n",
+    "    # Query to get scores for matches where the team was playing away\n",
+    "    away_matches = execute_and_return_result(\n",
+    "        'MATCH (a:MatchNode)-[MatchHeldInStadium]->(d:Stadium), (a)-[MatchAwayTeam]->(t:Team), \\\n",
+    "         (a)-[MatchHeldInSeason]->(s:Season), (a)-[MatchPartOfCompetition]->(c:Competition) \\\n",
+    "         WHERE d.name = \"{}\" AND t.team_name = \"{}\" AND s.season_name=\"{}\" AND c.competition_name = \"{}\" \\\n",
+    "         RETURN a.away_score, a.home_score'.format(\n",
+    "            stadium_name, team_name, season_name, competition_name\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    # Query to get scores for matches where the team was playing at home\n",
+    "    home_matches = execute_and_return_result(\n",
+    "        'MATCH (a:MatchNode)-[MatchHeldInStadium]->(d:Stadium), (a)-[MatchHomeTeam]->(t:Team), \\\n",
+    "         (a)-[MatchHeldInSeason]->(s:Season), (a)-[MatchPartOfCompetition]->(c:Competition) \\\n",
+    "         WHERE d.name = \"{}\" AND t.team_name = \"{}\" AND s.season_name=\"{}\" AND c.competition_name = \"{}\" \\\n",
+    "         RETURN a.home_score, a.away_score'.format(\n",
+    "            stadium_name, team_name, season_name, competition_name\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    win_count = 0\n",
+    "    loss_count = 0\n",
+    "\n",
+    "    # Count wins and losses in away matches\n",
+    "    for match in away_matches:\n",
+    "        if match[0] > match[1]:  # Away score > Home score\n",
+    "            win_count += 1\n",
+    "        elif match[0] < match[1]:  # Away score < Home score\n",
+    "            loss_count += 1\n",
+    "\n",
+    "    # Count wins and losses in home matches\n",
+    "    for match in home_matches:\n",
+    "        if match[0] > match[1]:  # Home score > Away score\n",
+    "            win_count += 1\n",
+    "        elif match[0] < match[1]:  # Home score < Away score\n",
+    "            loss_count += 1\n",
+    "\n",
+    "    # Calculating ratios\n",
+    "    total_games = win_count + loss_count\n",
+    "    if total_games > 0:\n",
+    "        win_ratio = win_count / total_games\n",
+    "        loss_ratio = loss_count / total_games\n",
+    "        return f\"Win count: {win_count}, Loss count: {loss_count}, Win Ratio: {win_ratio}, Loss Ratio: {loss_ratio} in {stadium_name}\"\n",
+    "    else:\n",
+    "        return f\"No games played in {stadium_name}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "eea9867f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'execute_and_return_result' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_7872\\212694694.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Test:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mratio\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcalculate_win_loss_ratio\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Leicester City\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"King Power Stadium \"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"2015/2016\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Premier League\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mratio\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_7872\\3146148075.py\u001b[0m in \u001b[0;36mcalculate_win_loss_ratio\u001b[1;34m(team_name, stadium_name, season_name, competition_name)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mcalculate_win_loss_ratio\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mteam_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstadium_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mseason_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcompetition_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;31m# Query to get scores for matches where the team was playing away\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     away_matches = execute_and_return_result(\n\u001b[0m\u001b[0;32m      5\u001b[0m         \u001b[0;31m'\u001b[0m\u001b[0mMATCH\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mMatchNode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mMatchHeldInStadium\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m->\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mStadium\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mMatchAwayTeam\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m->\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mTeam\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m          \u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mMatchHeldInSeason\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m->\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mSeason\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mMatchPartOfCompetition\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m->\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mCompetition\u001b[0m\u001b[1;33m)\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'execute_and_return_result' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#calculate_win_loss_ratio(\"Leicester City\", \"King Power Stadium \", \"2015/2016\", \"Premier League\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a448d98a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd7baf08",
+   "id": "747c5661",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aec3d214",
+   "id": "1754926b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "decd0e15",
+   "id": "8b574c70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99dcfadd",
+   "id": "c79f9e17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a192eec",
+   "id": "aa9d27cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56fbbf05",
+   "id": "56f29c74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69dd34eb",
+   "id": "32153349",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b23bcee0",
+   "id": "09270426",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c84a7148",
+   "id": "5560e196",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d3f6ed8",
+   "id": "0f0b2100",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25d3e2a1",
+   "id": "dba4c1d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c692f8fd",
+   "id": "22f5fb16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18abba3e",
+   "id": "9c6fee70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abdeffe7",
+   "id": "ee0e5d25",
    "metadata": {},
    "outputs": [],
    "source": [
