Connected ui to query engine

--- a/src/create_schema_and_populate_kb.ipynb
+++ b/src/create_schema_and_populate_kb.ipynb
@@ -589,7 +589,7 @@
    "outputs": [],
    "source": [
     "#Query 10\n",
-    "def own_goals_against_for_player(competition_name, season_name, player_name): \n",
+    "def own_goals_against_for_player(competition_name, season_name): \n",
     "    query = f''' \n",
     "    MATCH (a:Player)<-[EventRelatedToPlayer]-(e:Event) WHERE e.type_name = \"Own Goal Against\" AND EXISTS {{MATCH (a)-[MatchHeldInSeason]->(s:Season) WHERE s.season_name=\"{season_name}\"}} AND EXISTS {{MATCH (a)-[MatchPartOfCompetition]->(c:Competition) WHERE c.competition_name = \"{competition_name}\"}} RETURN a.player_name \n",
     "    ''' \n",
