Fixed the data path

--- a/src/create_schema_and_populate_kb.ipynb
+++ b/src/create_schema_and_populate_kb.ipynb
@@ -96,39 +96,39 @@
    ],
    "source": [
     "#Populate knowledge base\n",
-    "conn.execute('COPY MatchNode FROM \"data/matches.csv\"')\n",
-    "conn.execute('COPY Competition FROM \"data/competition.csv\"')\n",
-    "conn.execute('COPY Season FROM \"data/season.csv\"')\n",
-    "conn.execute('COPY Stadium FROM \"data/stadium.csv\"')\n",
-    "conn.execute('COPY Country FROM \"data/country.csv\"') \n",
-    "conn.execute('COPY Referee FROM \"data/referee.csv\"')\n",
-    "conn.execute('COPY Managers FROM \"data/managers.csv\"')\n",
-    "conn.execute('COPY CompetitionStage FROM \"data/competition_stage.csv\"')\n",
-    "conn.execute('COPY Team FROM \"data/teams.csv\"')\n",
-    "conn.execute('COPY TeamCountry FROM \"data/teams_country.csv\"') \n",
-    "conn.execute('COPY TeamManagers FROM \"data/teams_managers.csv\"') \n",
-    "conn.execute('COPY MatchHomeTeam FROM \"data/match_home_team.csv\"') \n",
-    "conn.execute('COPY MatchAwayTeam FROM \"data/match_away_team.csv\"')\n",
-    "conn.execute('COPY MatchPartOfCompetition FROM \"data/match_part_of_competition.csv\"')\n",
-    "conn.execute('COPY MatchHeldInSeason FROM \"data/match_held_in_season.csv\"')\n",
-    "conn.execute('COPY MatchHeldInStadium FROM \"data/match_held_in_stadium.csv\"')\n",
-    "conn.execute('COPY StadiumCountry FROM \"data/stadium_country.csv\"')\n",
-    "conn.execute('COPY RefereeCountry FROM \"data/referee_country.csv\"')\n",
-    "conn.execute('COPY ManagerCountry FROM \"data/manager_country.csv\"')\n",
-    "conn.execute('COPY MatchCompetitionStage FROM \"data/match_competition_stage.csv\"') \n",
-    "conn.execute('COPY MatchReferee FROM \"data/match_referee.csv\"')\n",
+    "conn.execute('COPY MatchNode FROM \"../data/matches.csv\"')\n",
+    "conn.execute('COPY Competition FROM \"../data/competition.csv\"')\n",
+    "conn.execute('COPY Season FROM \"../data/season.csv\"')\n",
+    "conn.execute('COPY Stadium FROM \"../data/stadium.csv\"')\n",
+    "conn.execute('COPY Country FROM \"../data/country.csv\"') \n",
+    "conn.execute('COPY Referee FROM \"../data/referee.csv\"')\n",
+    "conn.execute('COPY Managers FROM \"../data/managers.csv\"')\n",
+    "conn.execute('COPY CompetitionStage FROM \"../data/competition_stage.csv\"')\n",
+    "conn.execute('COPY Team FROM \"../data/teams.csv\"')\n",
+    "conn.execute('COPY TeamCountry FROM \"../data/teams_country.csv\"') \n",
+    "conn.execute('COPY TeamManagers FROM \"../data/teams_managers.csv\"') \n",
+    "conn.execute('COPY MatchHomeTeam FROM \"../data/match_home_team.csv\"') \n",
+    "conn.execute('COPY MatchAwayTeam FROM \"../data/match_away_team.csv\"')\n",
+    "conn.execute('COPY MatchPartOfCompetition FROM \"../data/match_part_of_competition.csv\"')\n",
+    "conn.execute('COPY MatchHeldInSeason FROM \"../data/match_held_in_season.csv\"')\n",
+    "conn.execute('COPY MatchHeldInStadium FROM \"../data/match_held_in_stadium.csv\"')\n",
+    "conn.execute('COPY StadiumCountry FROM \"../data/stadium_country.csv\"')\n",
+    "conn.execute('COPY RefereeCountry FROM \"../data/referee_country.csv\"')\n",
+    "conn.execute('COPY ManagerCountry FROM \"../data/manager_country.csv\"')\n",
+    "conn.execute('COPY MatchCompetitionStage FROM \"../data/match_competition_stage.csv\"') \n",
+    "conn.execute('COPY MatchReferee FROM \"../data/match_referee.csv\"')\n",
     "\n",
-    "conn.execute('COPY Player FROM \"data/player.csv\"')\n",
-    "conn.execute('COPY MatchPlayerPositions FROM \"data/match_player_positions.csv\"')\n",
-    "conn.execute('COPY MatchPlayers FROM \"data/match_player.csv\"')\n",
-    "conn.execute('COPY MatchPlayerCards FROM \"data/match_player_cards.csv\"')  \n",
-    "conn.execute('COPY PlayerCountry FROM \"data/player_country.csv\"')\n",
-    "conn.execute('COPY PlayerTeam FROM \"data/player_team.csv\"')\n",
+    "conn.execute('COPY Player FROM \"../data/player.csv\"')\n",
+    "conn.execute('COPY MatchPlayerPositions FROM \"../data/match_player_positions.csv\"')\n",
+    "conn.execute('COPY MatchPlayers FROM \"../data/match_player.csv\"')\n",
+    "conn.execute('COPY MatchPlayerCards FROM \"../data/match_player_cards.csv\"')  \n",
+    "conn.execute('COPY PlayerCountry FROM \"../data/player_country.csv\"')\n",
+    "conn.execute('COPY PlayerTeam FROM \"../data/player_team.csv\"')\n",
     "\n",
-    "conn.execute('COPY Event FROM \"data/event.csv\"')\n",
-    "conn.execute('COPY EventRelatedToPlayer FROM \"data/event_related_to_player.csv\"')\n",
-    "conn.execute('COPY EventRelatedToTeam FROM \"data/event_relates_to_team.csv\"')\n",
-    "conn.execute('COPY EventPossessionTeam FROM \"data/possession_team.csv\"')"
+    "conn.execute('COPY Event FROM \"../data/event.csv\"')\n",
+    "conn.execute('COPY EventRelatedToPlayer FROM \"../data/event_related_to_player.csv\"')\n",
+    "conn.execute('COPY EventRelatedToTeam FROM \"../data/event_relates_to_team.csv\"')\n",
+    "conn.execute('COPY EventPossessionTeam FROM \"../data/possession_team.csv\"')"
    ]
   },
   {
